@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.10
 
+	- Fixed bad system menu hadling in OS X (STR #2153)
+	- Fixed File Input mouse pointer dragging (STR #2181)
 	- Updated the bundled libpng to v1.2.35 (released 18 Feb. 2009)
 	- Added Fl_Scroll::bbox() documentation (STR #1893)
 	- Fixed static linking of image libraries (STR #1962)
